--- a/templates/edge-auth.template
+++ b/templates/edge-auth.template
@@ -12,7 +12,7 @@ Parameters:
   ArtifactsBucket:
     Description: S3 bucket with artifact files (Lambda functions, html files, JS code, etc.)
     Type: String
-    Default: cloudfront-blog-resources
+    Default: cloudfront-philnguyen-resources
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
     ConstraintDescription: ArtifactsBucket S3 bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).
   ArtifactsPrefix:
@@ -24,7 +24,7 @@ Parameters:
   TemplatesBucket:
     Description: S3 bucket with CloudFormation templates for nested stacks
     Type: String
-    Default: cloudfront-blog-resources
+    Default: cloudfront-philnguyen-resources
     AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
     ConstraintDescription: TemplatesBucket S3 bucket name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).
   TemplatesPrefix:
@@ -164,7 +164,7 @@ Resources:
   CognitoUserPool:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub https://raw.githubusercontent.com/phuongnq/${TemplatesPrefix}master/templates/cognito-user-pool.template
+      TemplateURL: !Sub https://s3.amazonaws.com/${TemplatesBucket}/${TemplatesPrefix}cognito-user-pool.template
       Parameters:
         BaseUrl:            !GetAtt CFDistribution.DomainName
         Environment:        !Ref AWS::StackName
@@ -172,7 +172,7 @@ Resources:
   PopulateS3Buckets:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL: !Sub https://raw.githubusercontent.com/phuongnq/${TemplatesPrefix}master/templates/populate-s3-bucket.template
+      TemplateURL: !Sub https://s3.amazonaws.com/${TemplatesBucket}/${TemplatesPrefix}populate-s3-bucket.template
       Parameters:
         UserPoolId:         !GetAtt CognitoUserPool.Outputs.UserPoolId
         ClientId:           !GetAtt CognitoUserPool.Outputs.ClientId
@@ -188,7 +188,7 @@ Resources:
   LambdaAtEdge:
     Type: AWS::CloudFormation::Stack
     Properties:
-      TemplateURL:    !Sub https://raw.githubusercontent.com/phuongnq/${TemplatesPrefix}master/templates/lambda-at-edge.template
+      TemplateURL:    !Sub https://s3.amazonaws.com/${TemplatesBucket}/${TemplatesPrefix}lambda-at-edge.template
       Parameters:
         UserPoolId:     !GetAtt CognitoUserPool.Outputs.UserPoolId
         PublicBucket:   !Ref S3BucketPublic
